--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
                 <div class="col-lg-8">
                         <h4>{{ topic.name }}</h4>
                         <p class="text-muted">{{ topic.description }}</p>
-                        <p class="text-muted"><i>find out more</i> &rarr; <a class="page-scroll" href="#{{ topic.more }}">{{ topic.more }}</a></p>
+                        <!-- <p class="text-muted"><i>find out more</i> &rarr; <a class="page-scroll" href="#{{ topic.more }}">{{ topic.more }}</a></p> -->
                 </div>
             </div>
         </div>
@@ -56,27 +56,127 @@ layout: default
         </div>
     </section>
 
-    <!--- PAPERS -->
-        <section id="papers" class="{% cycle '', 'bg-light-gray' %}">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Papers</h2>
-                    </div>
-                </div>
+<!--- PAPERS -->
+<section id="papers" class="{% cycle '', 'bg-light-gray' %}">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Publications</h2>
             </div>
+        </div>
+    </div>
+    <div class="container">
+      <!-- <div class="row">
+            <div class="col-lg-12">
+                <h3>Submitted</h3>
+                {% bibliography  --query @unpublished %}
+            </div>
+      </div> -->
+      <div class="row">
+          <div class="col-lg-12">
+              <h3>Papers</h3>
+	        {% bibliography --query @article %}
+          <h3>Ph.D. thesis</h3>
+      {% bibliography --query @book %}
+          </div>
+      </div>
+    </div>
+</section>
+
+
+        <!-- <section class="bg-light" id="portfolio">
             <div class="container">
-              <!-- <div class="row">
-                    <div class="col-lg-12">
-                        <h3>Submitted</h3>
-                        {% bibliography  --query @unpublished %}
-                    </div>
-    	        </div> -->
               <div class="row">
-                  <div class="col-lg-12">
-                      <!-- <h3>In Press / Published</h3> -->
-      		        {% bibliography --query @article %}
+                <div class="col-lg-12 text-center">
+                  <h2 class="section-heading text-uppercase">Portfolio</h2>
+                  <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fas fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+                  </a>
+                  <div class="portfolio-caption">
+                    <h4>Threads</h4>
+                    <p class="text-muted">Illustration</p>
                   </div>
-    	        </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fas fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+                  </a>
+                  <div class="portfolio-caption">
+                    <h4>Explore</h4>
+                    <p class="text-muted">Graphic Design</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fas fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+                  </a>
+                  <div class="portfolio-caption">
+                    <h4>Finish</h4>
+                    <p class="text-muted">Identity</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fas fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+                  </a>
+                  <div class="portfolio-caption">
+                    <h4>Lines</h4>
+                    <p class="text-muted">Branding</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fas fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+                  </a>
+                  <div class="portfolio-caption">
+                    <h4>Southwest</h4>
+                    <p class="text-muted">Website Design</p>
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                  <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+                    <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                        <i class="fas fa-plus fa-3x"></i>
+                      </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+                  </a>
+                  <div class="portfolio-caption">
+                    <h4>Window</h4>
+                    <p class="text-muted">Photography</p>
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
+          </section> -->
