--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ layout: default
         {% if topic.picright %}
         <div class="container">
             <div class="row research-topic">
+                <div class="col-md-1">
+                </div>
                 <div class="col-lg-8">
                         <h4>{{ topic.name }}</h4>
                         <p class="text-muted">{{ topic.description }}</p>
