--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
         {% if topic.picright %}
         <div class="container">
             <div class="row research-topic">
-                <div class="col-md-1">
+                <div class="col-lg-1">
                 </div>
                 <div class="col-lg-8">
                         <h4>{{ topic.name }}</h4>
