--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Publications</h2>
-                <h3 class="section-subheading text-muted">Because the digital equivalent of flat paper becomes better with a journal logo on it</h3>
+                <h3 class="section-subheading text-muted">Because the digital equivalent of flat paper is better with a journal logo on it</h3>
             </div>
         </div>
     </div>
