--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ layout: default
     </section>
 
 <!--- CODE -->
-<section id="research" class="{% cycle '', 'bg-light-gray' %}">
+<section id="code" class="{% cycle '', 'bg-light-gray' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Code</h2>
-                <h3 class="section-subheading text-muted">Because open science is so much more than just open access publication</h3>
+                <h3 class="section-subheading text-muted">From hypothetical reproducability to actual reusability</h3>
             </div>
         </div>
     </div>
